# SmartTutor

./: .gitignore  GEMINI.md  README.md  docker-compose.yml  railway.json
backend/: .env  Dockerfile  README.md  main.py  pyproject.toml  railway.json
backend/app/api/: deps.py
backend/app/api/routes/: __init__.py  ask.py  auth.py  notes.py  practice.py  quiz.py
backend/app/core/: __init__.py  config.py  exceptions.py  logger.py  security.py
backend/app/db/: db.py
backend/app/models/: notes.py  question.py  users.py
backend/app/schemas/: __init__.py  requests.py  responses.py  saved.py
backend/app/utils/: ask_api.py  groq.py  notes_api.py  practice_api.py  quiz_api.py
backend/instance/: smart-tutor.db
backend/tests/: conftest.py  test_ask.py  test_auth.py  test_notes.py  test_practice.py  test_quiz.py
frontend/: Dockerfile  FRONTEND.md  README.md  eslint.config.js  index.html  nginx.conf  package-lock.json  package.json  tsconfig.json  vercel.json  vite.config.ts
frontend/src/: App.tsx
frontend/src/components/: Navigation.tsx  ProtectedRoute.tsx
frontend/src/constants/: index.ts
frontend/src/contexts/: AuthContext.tsx
frontend/src/hooks/: useAI.ts  useSavedContent.ts
frontend/src/lib/: utils.ts
frontend/src/pages/: AskQuestion.tsx  Dashboard.tsx  Index.tsx  Login.tsx  Practice.tsx  Quiz.tsx  Register.tsx  SavedContent.tsx  StudyNotes.tsx
frontend/src/services/: aiAPI.ts  api.ts  authAPI.ts
frontend/src/types/: index.ts
